--- a/Configurator/test.ini
+++ b/Configurator/test.ini
@@ -4,16 +4,27 @@ RemovePrecipitations = true
 RemoveFogPass = false
 MemoryTextureManagement = true
 GrassMode = true
-ReplaceIntro = true
+ReplaceIntro = false
 AnisotropicFilter = 4
 ScreenshotKey = 87
 FarPlaneDistance = 283840.0
+TestDirectionLight = false
+
+[WaterEngine]
+ReflectionMapSize = 512
+SetAtmoshpere = false
 
 [Develop]
 CompileShaders = 2
 CompileEffects = 2
-DebugMode = true
+DebugMode = false
 TraceShaders = 25
+
+[Culling]
+EnableMainCulling = true
+EnableRelfectionCulling = true
+CullMinSize = 10.0
+CullReflectionMinSize = 100.0
 
 [FlyCam]
 Enabled = true
@@ -33,23 +44,23 @@ HealthCoeff = 0.5
 FatigueCoeff = 0.5
 
 [Shaders]
-Blood = false
+Blood = true
 Grass = false
-HDR = false
-NightEye = false
-POM = false
-Skin = false
-Terrain = false
+HDR = true
+NightEye = true
+POM = true
+Skin = true
+Terrain = true
 Water = true
 Extra = true
 
 [Effects]
-AmbientOcclusion = true
+AmbientOcclusion = false
 BloodLens = true
 Bloom = true
 Cinema = true
 Coloring = true
-DepthOfField = true
+DepthOfField = false
 GodRays = true
 LowHF = true
 MotionBlur = false
@@ -62,7 +73,7 @@ WaterLens = true
 WetWorld = true
 VolumetricFog = false
 ShadowsExteriors = true
-ShadowsInteriors = true
+ShadowsInteriors = false
 Specular = true
 Extra = true
 
@@ -71,6 +82,10 @@ TextFont = "Calibri"
 TextFontStatus = "Consolas"
 TextSize = 22
 TextSizeStatus = 12
+TextColorNormal = [240, 200, 80]
+TextShadowColorNormal = [50, 50, 50]
+TextColorSelected = [255, 255, 255]
+TextShadowColorSelected = [50, 50, 50]
 KeyEnable = 24
 KeyUp = 200
 KeyDown = 208
@@ -96,9 +111,8 @@ Statics = true
 Terrain = true
 Trees = true
 Lod = false
-MinRadius = 20.0
+MinRadius = 10.0
 Alpha = true
-ExcludeForms = []
 
 [ShadowsExterior]
 Enabled = true
@@ -109,7 +123,7 @@ ShadowMapFarPlane = 32768.0
 BlurShadowMaps = true
 
 [ShadowsInterior]
-Enabled = true
+Enabled = false
 ShadowMode = 1
 ShadowCubeMapResolution = 2048
 LightPoints = 4
