Properly handle Tree Nodes without actual SpeedTree Leaves

--- a/OblivionReloaded/OblivionReloaded.vcxproj
+++ b/OblivionReloaded/OblivionReloaded.vcxproj
@@ -106,6 +106,7 @@
       <ConformanceMode>false</ConformanceMode>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
